# rust_sqlx_bug

./: Cargo.toml  setup.sql
src/: main.rs
