[package]
name = "rust_sqlx_bug"
version = "0.1.0"
authors = ["Peter Maatman <blackwolf12333@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="*", features=["derive"]}
serde_json = "*"
sqlx = { path = "../../oss/rust/sqlx", default-features = false, features = [ "runtime-tokio", "mysql", "chrono", "macros", "json"] }
tokio = { version = "0.2.21", features = ["full"] }
futures = "0.3"
