[package]
name = "rust_sqlx_bug"
version = "0.1.0"
authors = ["Peter Maatman <blackwolf12333@gmail.com>", "Tyler Hallada <tyler@hallada.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "postgres", "chrono", "macros", "json"] }
tokio = { version = "0.2", features = ["macros"] }
